Bug 475232 - "Using an empty domain, fix the code." - "Hi,\n\nplease find attached the user id '%UIDNAME%' of your key %KEYID% signed by me. ............"
Summary: "Using an empty domain, fix the code." - "Hi,\n\nplease find attached the use...
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-05 04:32 UTC by Jason Khanlar
Modified: 2023-10-18 08:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Khanlar 2023-10-05 04:32:46 UTC
SUMMARY
***
ki18n5 version 5.110.0-1
kgpg version 23.08.1-1

In `journalctl` I've been seeing this a lot for many days, even over a week ago: kgpg[2042]: kf.i18n: KLocalizedString: Using an empty domain, fix the code. msgid: "Hi,\n\nplease find attached the user id '%UIDNAME%' of your key %KEYID% signed by me. This mail is encrypted with that key to make sure you control both the email address and the key.\n\nIf you have multiple user ids, I sent the signature for each user id separately to that user id's associated email address. You can import the signatures by running each through `gpg --import` after you have decrypted them with `gpg --decrypt`.\n\nIf you are using KGpg store the attachment to disk and then import it. Just select `Import Key...` from `Keys` menu and open the file.\n\nNote that I did not upload your key to any keyservers. If you want this new signature to be available to others, please upload it yourself. With GnuPG this can be done using gpg --keyserver subkeys.pgp.net --send-key %KEYID%.\n\nWith KGpg you can right click on the key once you imported all user ids and choose `Export Public Key...`.\n\nIf you have any questions, don't hesitate to ask.\n" msgid_plural: "" msgctxt: ""

It appears thousands of times in `journalctl`. Today alone `journalctl` shows 60 repeats per hour except one hour, 240 instances. I'm trying to track it down where it's coming from, and I think ki18n is the source maybe.

I found this infos which maybe leads to a different source https://wiki.debian.org/caff

huh, "caff is part of the package signing-party. caff will mostly be used after a keysigning party."  and I did not install that package: extra/signing-party 2.11-1

otherwise maybe the source is kgpg? https://github.com/KDE/kgpg/blob/master/kgpg.h

aha, file /usr/share/locale/en_GB/LC_MESSAGES/kgpg.mo is probably the source, from kgpg 23.08.1-1 but what can I do to make that message stop repeatedly appearing in journalctl?

There does not seem to be much discussion about it either https://google.com/search?q=kgpg%20%22Using%20an%20empty%20domain%2C%20fix%20the%20code.%22

"Using an empty domain, fix the code." what does this mean? Maybe one of the variables is code that needs to be fixed? %UIDNAME% or %KEYID% ?

someone suggested this issue sounds like a bug, and mentioned https://old.reddit.com/r/kde/comments/12fv1jb/am_i_the_only_one_having_an_issue_with_baloo/ and to maybe file a bug report here, so I'm reporting the issue here.
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-10-11 20:23:39 UTC
The offending string comes from KGPG; moving there.
Comment 2 Carl Schwan 2023-10-18 08:00:19 UTC
Git commit af4974d1a61e17ff82786102850238b73046832d by Carl Schwan.
Committed on 18/10/2023 at 09:59.
Pushed by carlschwan into branch 'master'.

Use KLazyLocalizedString to init static lokalized string

M  +2    -1    kgpg.h
M  +1    -1    kgpg.kcfg

https://invent.kde.org/utilities/kgpg/-/commit/af4974d1a61e17ff82786102850238b73046832d
Comment 3 Carl Schwan 2023-10-18 08:01:49 UTC
Bug is fixed but I recommend against using KGpg and instead to use Kleopatra which is very actively maintained.
Comment 4 Carl Schwan 2023-10-18 08:02:11 UTC
Git commit eb9ef206cdd4850782f513da8afa70bb411a334c by Carl Schwan.
Committed on 18/10/2023 at 10:02.
Pushed by carlschwan into branch 'release/23.08'.

Use KLazyLocalizedString to init static lokalized string

M  +2    -1    kgpg.h
M  +1    -1    kgpg.kcfg

https://invent.kde.org/utilities/kgpg/-/commit/eb9ef206cdd4850782f513da8afa70bb411a334c