Use KLazyLocalizedString to init static lokalized string

BUG: 475232